tests/spec/emit/snapshots/let_with_block_value.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let x = {
      let a = 10;
      let b = 20;
      a + b
    };
    x
  }
---
package main

func test() int {
	var x int
	{
		a := 10
		b := 20
		x = a + b
	}
	return x
}
