tests/spec/emit/snapshots/let_with_select_expression.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let ch = Channel.new<int>();
    let result = select {
      let Some(v) = ch.receive() => v,
      _ => 0,
    };
    result
  }
---
package main

func test() int {
	ch := make(chan int)
	var result int
	ch_1 := ch
	for {
		select {
		case v, ok := <-ch_1:
			if ok {
				result = v
			} else {
				ch_1 = nil
				continue
			}
		default:
			result = 0
		}
		break
	}
	return result
}
