tests/spec/emit/snapshots/lisette_function_returning_partial_tuple_uses_packed_abi.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn pair<A, B>(a: A, b: B) -> Partial<(A, B), error> {
    Partial.Ok((a, b))
  }
  
  fn test() {
    match pair<int, string>(1, "x") {
      Partial.Ok((first, second)) => {
        let _ = first
        let _ = second
      },
      Partial.Err(e) => {
        let _ = e
      },
      Partial.Both((first, second), e) => {
        let _ = first
        let _ = second
        let _ = e
      },
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func pair[A any, B any](a A, b B) (lisette.Tuple2[A, B], error) {
	return lisette.MakeTuple2[A, B](a, b), nil
}

func test() {
	ret, ret_1 := pair[int, string](1, "x")
	var result lisette.Partial[lisette.Tuple2[int, string], error]
	if ret_1 != nil {
		result = lisette.MakePartialBoth[lisette.Tuple2[int, string], error](ret, ret_1)
	} else {
		result = lisette.MakePartialOk[lisette.Tuple2[int, string], error](ret)
	}
	switch result.Tag {
	case lisette.PartialOk:
		_ = result.OkVal.First
		_ = result.OkVal.Second
	case lisette.PartialErr:
		_ = result.ErrVal
	default:
		_ = result.OkVal.First
		_ = result.OkVal.Second
		_ = result.ErrVal
	}
}
