tests/spec/emit/snapshots/lisette_struct_with_go_imported_field_zero_fills.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:net/http"
  
  struct Wrapper { srv: http.Server }
  
  fn test() -> Wrapper {
    Wrapper { .. }
  }
---
package main

import "net/http"

type Wrapper struct {
	srv http.Server
}

func test() Wrapper {
	return Wrapper{srv: http.Server{}}
}
