tests/spec/emit/snapshots/lisette_struct_with_go_interface_field_emits.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:context"
  
  struct Wrapper { ctx: context.Context }
  
  fn test() -> Wrapper {
    Wrapper { ctx: context.Background() }
  }
---
package main

import "context"

type Wrapper struct {
	ctx context.Context
}

func test() Wrapper {
	return Wrapper{ctx: context.Background()}
}
