tests/spec/emit/snapshots/lisette_struct_with_go_interface_zero_fills.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:context\"\n\nstruct Wrapper { ctx: context.Context }\n\nfn test() -> Wrapper {\n  Wrapper { .. }\n}\n"
---
package main

import "context"

type Wrapper struct {
	ctx context.Context
}

func test() Wrapper {
	return Wrapper{ctx: nil}
}
