tests/spec/emit/snapshots/lisette_struct_with_go_named_scalar_autofills.snap
---
source: tests/spec/emit/imports.rs
description: |
  
  import "go:time"
  
  struct Wrapper { d: time.Duration }
  
  fn test() -> Wrapper {
    Wrapper { .. }
  }
---
package main

import "time"

type Wrapper struct {
	d time.Duration
}

func test() Wrapper {
	return Wrapper{d: time.Duration(0)}
}
