tests/spec/emit/snapshots/lisette_struct_with_go_named_scalar_zero_fills.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:time\"\n\nstruct Wrapper { d: time.Duration }\n\nfn test() -> Wrapper {\n  Wrapper { .. }\n}\n"
---
package main

import "time"

type Wrapper struct {
	d time.Duration
}

func test() Wrapper {
	return Wrapper{d: *new(time.Duration)}
}
